<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
            android:id="@+id/backgroundHeading"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_background_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <TextView
            android:id="@+id/radiusLabel"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/string_elevation_seekbar_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backgroundHeading" />

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/elevationSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/radiusLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/radiusLabel"
            app:layout_constraintTop_toTopOf="@id/radiusLabel" />

    <TextView
            android:id="@+id/colorLabel"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/string_background_color_selector_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiusLabel" />

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_oval_border"
            android:padding="1dp"
            app:layout_constraintStart_toEndOf="@+id/colorLabel"
            app:layout_constraintTop_toTopOf="@+id/colorLabel">

        <ImageView
                android:id="@+id/backgroundColorImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/bg_oval" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>